--- a/css_01_selector.html
+++ b/css_01_selector.html
@@ -59,7 +59,7 @@
             color:white;
         }
 
-        /* 라디오 버튼이나 체크박스에 많이 활요오디는 input:checked */
+        /* 라디오 버튼이나 체크박스에 많이 활용되는 input:checked */
         input:checked{  /* 체크가 된 것만 */
             width:100px;
             height:100px;
