--- a/css_02_box.html
+++ b/css_02_box.html
@@ -74,12 +74,13 @@
             height: 500px;
             background-color:beige;
             display: flex;  /* 안쪽의 배치를 유연하게 만들어줌. */
-            justify-content: center;  /* justify-content : 수평 정렬 방식 (flex 쌓이는 방향이 축) 
-                                                            space-between : 첫번째, 맨끝이 양끝에 가고 여백을 n빵
+            justify-content: center;  /* justify-content : 주축의 정렬 방식 (flex 쌓이는 방향이 축) 
+                                                            space-between : 첫번째, 맨끝이 양끝에 가고 여백을 동일하게
                                                             space-around : 양옆에 똑같은 여백을 갖도록
                                                 화면의 사이즈를 줄이더라도 똑같은 여백의 사이즈를 갖도록 할 수 있는 게 바로 flex
                                                 아까 그냥 inline-block은 밑으로 내려갔었음.*/
-            align-items: center;  /* align-items : justify-content와 수직 방향이 축이 됨.*/
+            align-items: center;  /* align-items : 교차축의 정렬 방식
+                                    justify-content와 수직 방향이 축이 됨.*/
             flex-direction:column;
             /*기본 : row : item들이 가로로 쌓임
             row-reverse : 순서 거꾸로
